--- a/index.html
+++ b/index.html
@@ -5,6 +5,22 @@
     <title></title>
     <link rel="stylesheet" href="css/skeleton.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" href="favicon/widgets.png">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.11/handlebars.min.js"></script>
+
+    <!-- handlebars created on below script tag -->
+    <script type="text/x-template" class="userTemplate">
+      <tr>
+        <td>{{smsTotalOne}}</td>
+        <td>{{callTotalOne}}</td>
+        <td>{{totalOne}}</td>
+    
+        <td>{{callTotalTwo}}</td>
+        <td>{{smsTotalTwo}}</td>
+        <td>{{totalTwo}}</td>
+      </tr>   
+  </script>
+  <!-- handlebars ends here -->
   </head>
   <body>
     <div class="container">
@@ -183,17 +199,17 @@
 
           <div class="row">
 
-             <div class="six columns">
+            <div class="six columns">
               <h5>Bill type</h5>
-              <label class="">
-                <input type="radio" name="billItemTypeWithSettings" class="billItemTypeWithSettings" value="call">
+              <label class="call">
+                <input type="radio" name="billSettingsItemType" class="billItemTypeWithSettings" value="call">
                 <span class="label-body">Call</span>
               </label>
-              <label class="">
-                <input type="radio" name="billItemTypeWithSettings" class="billItemTypeWithSettings" value="sms">
+              <label class="sms">
+                <input type="radio" name="billSettingsItemType" class="billItemTypeWithSettings" value="sms">
                 <span class="label-body" >SMS</span>
               </label>
-              <button class="button-primary addedBtn" type="button" name="button">Add</button>
+              <button class="button-primary billSettingsAddButton" type="button" name="button">Add</button>
 
               <h5>Totals</h5>
                   <table>
@@ -222,9 +238,10 @@
               <input class="u-full-width warningLevelSetting " type="number" placeholder="eg. 30.00" class="warningLevel" >
               <label for="">Critical level</label>
               <input class="u-full-width criticalLevelSetting" type="number" placeholder="eg. 65.00" >
-              <button class="button-primary updateSettings" type="button" name="button">Update settings</button>
+              <button class="button-primary updateSettingsbtn" type="button" name="button">Update settings</button>
 
             </div>
+            
           </div>
         </div>
       </div>
